# iso6346

./: .gitignore  CMakeLists.txt  Makefile  README.adoc  iso6346.c  iso6346.h  iso6346_reg.c  meson.build
include/: iso6346.h  meson.build
lib/: CMakeLists.txt  libiso6346.c  meson.build
src/: CMakeLists.txt  iso6346.c  meson.build
test/: meson.build  test.c
