cmake_minimum_required(VERSION 3.16.3)
project(iso6346 VERSION 0.1 LANGUAGES C)
include(GNUInstallDirs)
add_subdirectory(lib)
add_subdirectory(src)
install(TARGETS iso6346-bin
  EXPORT iso6346
  RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR})

install(TARGETS iso6346
  EXPORT iso6346
  ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

